[gd_scene load_steps=2 format=3 uid="uid://disku4y5k60f5"]

[ext_resource type="Script" uid="uid://bbvk00m6cs4sw" path="res://Browser/Dialogs/DirectoryMoveDialog.gd" id="1"]

[node name="DirectoryMoveDialog" type="Window"]
size = Vector2i(400, 300)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Tree" type="Tree" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_reselect = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Move" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Moves the asset to a new directory."
disabled = true
text = "Move"

[node name="Link" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Links the asset with a directory."
disabled = true
text = "Link"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Link" to="." method="_on_Link_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
